fixed flickering when switch light/dark mode

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -15,17 +15,10 @@
 @layer base {
   html {
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-    color: var(--text);
-  }
-  html.dark {
-    --text: theme(--color-white);
   }
 
   body {
-    background: var(--bg);
-  }
-  .dark body {
-    --bg: theme(--color-main-dark);
+    @apply bg-gray-50 dark:bg-main-dark text-black dark:text-white;
   }
 
   content {
@@ -79,10 +72,6 @@ input, textarea {
   flex flex-col items-center 
   bg-post-light dark:bg-post-dark
   rounded;
-
-  h1, h2, h3, h4, h5, h6 {
-    @apply mb-[5%];
-  }
 }
 
 .profile {
